--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/YetAnotherJonWilson/verbose-fishstick.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Jon Wilson",
   "license": "MIT",
   "type": "module",
   "bugs": {
