--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "A meditation app that uses the atprotocol to save stats and presets.",
   "main": "index.js",
   "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -21,6 +24,9 @@
   "dependencies": {
     "@atproto/api": "^0.18.1",
     "@atproto/lexicon": "^0.5.1",
-    "@atproto/oauth-client-node": "^0.3.10"
+    "@atproto/oauth-client-browser": "^0.3.35"
+  },
+  "devDependencies": {
+    "vite": "^7.2.4"
   }
 }
